--- a/public/css/home.scss
+++ b/public/css/home.scss
@@ -1,6 +1,4 @@
-$green:  rgb(87, 206, 87);
-$grey:  rgb(46, 49, 54);
-
+@import './variables';
 @import './header';
 @import './filterPanel';
 @import './displayPanel';
