--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -5,7 +5,7 @@ background-color: $primaryColor;
 display: flex;
 }
 .headerItem {
-    margin-left: 2%;
+    margin-left: 15%;
 }
 .filter{
 text-align: center;
@@ -55,5 +55,26 @@ box-shadow: none;
     }
     .headerItem {
         display: none;
+    }
+}
+@media (max-height: 480px) and (orientation: landscape){
+    .logInBtnNavBar{       
+        width: 13%;
+        height: 40px;
+    }
+    .headerItem {
+        display: none;
+    }
+    .filter{
+        margin-left: 27%;
+    }
+}
+@media (min-width: 768px) and (max-width: 1024px){
+    .filter{       
+        margin-left: 23%;      
+    }
+    .logInBtnNavBar{       
+        width: 8%;
+        height: 45px;
     }
 }
