--- a/public/css/home.scss
+++ b/public/css/home.scss
@@ -8,3 +8,17 @@ body{
   padding: 0px;
   font-family: Arial, Helvetica, sans-serif;
 }
+.topBtn{
+  background: none;
+  border: none;
+  color:white;
+  background-color: #454955;
+  width: 50px;
+  height: 50px;
+  padding: 0px;
+  border-radius: 50%;
+  transition: 1s;
+  margin: 0px auto;
+  outline: none;
+  cursor: pointer;
+}
